crates/analyzer/tests/snapshots/errors__invalid_comparisons.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: `Point` type can't be compared with the `==` operator
   ┌─ compile_errors/invalid_comparisons.fe:13:10
   │
13 │   return p == Point(x: 10, y: 20)
   │          ^^^^^^^^^^^^^^^^^^^^^^^^ invalid comparison

error: `State` type can't be compared with the `==` operator
   ┌─ compile_errors/invalid_comparisons.fe:18:10
   │
18 │   return s == State::Done
   │          ^^^^^^^^^^^^^^^^ invalid comparison


